force-app/main/default/objects/Leader_Follower_Mapping__c/Leader_Follower_Mapping__c.object-meta.xml
<CustomObject>
    <label>Billcode Map</label>
    <nameField>
        <label>Billcode Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billcode Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>