force-app/main/default/objects/Leader_Follower_Mapping__c/fields/Billcode_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Billcode_Product_Code__c</fullName>
    <formula>Follower_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billcode Product Code</label>
    <type>Text</type>
</CustomField>