force-app/main/default/objects/Leader_Follower_Mapping__c/fields/Follower_Billcode__c.field-meta.xml
<CustomField>
    <fullName>Follower_Billcode__c</fullName>
    <formula>Follower_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follower Billcode</label>
    <type>Text</type>
</CustomField>