force-app/main/default/objects/Leader_Follower_Mapping__c/fields/Follower_Product__c.field-meta.xml
<CustomField>
    <fullName>Follower_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PA Model Billcode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Bill Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Billcode Maps (Follower Product)</relationshipLabel>
    <relationshipName>Leader_Follower_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>