force-app/main/default/objects/Leader_Follower_Mapping__c/fields/isDuplicate__c.field-meta.xml
<CustomField>
    <fullName>isDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gitlab: #16917
This field is flagged to identify record with duplicate PA Model billcode and to restrict record creation</description>
    <label>isDuplicate?</label>
    <type>Checkbox</type>
</CustomField>