force-app/main/default/objects/Leader_Follower_Mapping__c/fields/Leader_Billcode__c.field-meta.xml
<CustomField>
    <fullName>Leader_Billcode__c</fullName>
    <formula>Leader_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leader Billcode</label>
    <type>Text</type>
</CustomField>