force-app/main/default/objects/Leader_Follower_Mapping__c/fields/Leader_Product__c.field-meta.xml
<CustomField>
    <fullName>Leader_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the Product to be displayed on Opportunity</description>
    <label>SF Product Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>IMNA Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Billcode Maps (Leader Product)</relationshipLabel>
    <relationshipName>Leader_Follower_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>