force-app/main/default/objects/Leader_Follower_Mapping__c/fields/Standard_Quote__c.field-meta.xml
<CustomField>
    <fullName>Standard_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Quote</label>
    <type>Checkbox</type>
</CustomField>