force-app/main/default/objects/Leader_Follower_Mapping__c/validationRules/Restrict_Duplicate_Billcode_Maps.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Duplicate_Billcode_Maps</fullName>
    <active>true</active>
    <description>Gitlab: #16917

Restrict user from creating duplicate Bill code Maps with same PA Model Billcode</description>
    <errorConditionFormula>isDuplicate__c</errorConditionFormula>
    <errorDisplayField>Follower_Product__c</errorDisplayField>
    <errorMessage>This PA Model Billcode Product is already mapped to a SF Product Code. Please try again with a different Product Code or update the existing record.</errorMessage>
</ValidationRule>