force-app/main/default/objects/Leader_Follower_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Leader_Product__c</columns>
    <columns>Follower_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>